--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Dzhevrie/Project_2t"
+    "url": "https://github.com/Dzhevrie/Project_2"
   },
   "author": "Dzhevrie Lyumanova",
   "license": "ISC",
